--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "private": true,
   "devDependencies": {
+    "@types/node": "^10.5.4",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "^2.9.2"
   }
 }
