--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   },
   "devDependencies": {
     "@types/node": "^10.5.4",
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
     "nodemon": "^1.18.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.1"
   }
 }
