--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
+    "allowJs": true,
+    "jsx": "react",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
